<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.DetailActivity">

    <ProgressBar
        android:id="@+id/detail_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_bg_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:contentDescription="@string/image_background_detail" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_detail"
        android:contentDescription="@string/image_background_detail" />

    <ImageView
        android:id="@+id/img_bg_movies"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/teal_700"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_background" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/background_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_background" />

    <ImageView
        android:id="@+id/img_poster_detail"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="@+id/img_bg_detail"
        app:layout_constraintEnd_toEndOf="@+id/img_bg_detail"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:contentDescription="@string/image_poster_detail" />

    <TextView
        android:id="@+id/tv_title_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="4dp"
        android:maxLines="4"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_overview"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_poster_detail"
        app:layout_constraintTop_toBottomOf="@+id/img_bg_movies"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/releasedate_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_date"
        android:textColor="@color/teal_200"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/img_poster_detail"
        app:layout_constraintTop_toBottomOf="@+id/img_poster_detail"
        app:layout_constraintVertical_bias="0.10"/>

    <TextView
        android:id="@+id/tv_release_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/release_date_description"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/releasedate_textView"
        app:layout_constraintTop_toBottomOf="@+id/releasedate_textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/overview_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textColor="@color/teal_200"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_release_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="42dp"
        android:maxLines="15"
        android:text="@string/overview_description"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/overview_textView"
        app:layout_constraintTop_toBottomOf="@+id/overview_textView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btn_favorite"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="8dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:layout_constraintBottom_toBottomOf="@+id/img_bg_movies"
        app:layout_constraintEnd_toEndOf="@+id/img_bg_movies"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/img_bg_movies"
        app:layout_constraintTop_toTopOf="@+id/img_bg_detail"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/favorites" />

</androidx.constraintlayout.widget.ConstraintLayout>