<resources>
    <string name="app_name">MovieCatalogApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="movie">Movie</string>
    <string name="tvshow">TV Show</string>
    <string name="release">Release</string>
    <string name="overview_description">Overview Description</string>
    <string name="overview">Overview</string>
    <string name="genre">Genre</string>
    <string name="image_background">Image Background</string>
    <string name="image_background_detail">Image Background Detail</string>
    <string name="release_date">Release Date</string>
    <string name="release_date_description">Release Date Description</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="message_undo">Batalkan Menghapus Item?</string>
    <string name="message_ok">OK</string>
    <string name="poster">Poster</string>
    <string name="image_poster_detail">Image_Poster_Detail</string>
</resources>